En cours de création des Cards

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -29,3 +29,8 @@
     box-sizing: content-box;
     
 }
+.Pizzas {
+    display: grid;
+    grid-template-columns: repeat(3, calc(33.333% - (30px * 2 / 3)));
+    grid-template-rows: repeat(auto-fit, 283px);
+}
