--- a/src/components/Panier/Panier.css
+++ b/src/components/Panier/Panier.css
@@ -3,6 +3,9 @@
     padding-left: 30px;
     box-sizing: content-box;
     margin-top: 15px;
+    position: sticky;
+    top:  85px;
+    height: 100%;
 }
 .PanierAchat {
     background-color: white;
