--- a/src/pages/Details/Details.css
+++ b/src/pages/Details/Details.css
@@ -2,7 +2,6 @@
     background-color: rgb(245, 247, 249);
     display: flex;
     flex-direction: column;
-    /* align-items: center; */
     max-width: 1200px;
     margin: 0 auto 15px;
     margin-top: 10px;
@@ -26,7 +25,6 @@
 }
 .DetailsGeneral {
     display: flex;
-
 }
 .DetailsPizza {
     width: 75%;
@@ -47,6 +45,7 @@
 .DetailsDivInfos {
     width: 50%;
     padding: 15px;
+    height: 100%;
 }
 .divIngredients {
     border: 1px solid lightgray;
@@ -54,7 +53,11 @@
     padding: 15px;
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 20px;
+}
+.divIngredients.closed {
+    height: 55px;
+    overflow: hidden;
 }
 .ingredient {
     display: flex;
@@ -70,6 +73,15 @@
 .ingredient > span {
     flex-grow: 1;
     margin-left: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-right: 5px;
+    font-size: 14px;
+}
+.ingredient > span > span {
+    font-size: 12px;
+    color: #6b6e79;
 }
 .ingredient > div:last-of-type {
     display: flex;
@@ -108,6 +120,83 @@
     padding: 15px;
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 20px;
     margin-top: 15px;
+    /* overflow-y: scroll; */
+    /* height: 270px; */
+}
+.divIngredientsSupp.closed {
+    height: 55px;
+    overflow: hidden;
+}
+.divIngredientsSupp > .ingredient > div:last-of-type > span {
+    height: 18px;
+    width: 18px;
+    border-radius: 50%;
+    background-color: rgb(112, 164, 1);
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    padding-top: 3px;
+    cursor: pointer;
+}
+.DetailsDivIngredients {
+    overflow-y: scroll;
+    height: 400px;
+}
+.DetailsBtnCommander {
+    padding-top: 15px;
+    margin-right: 15px;
+}
+.DetailsBtnCommander button {
+    width: 100%;
+    font-size: 18px;
+    color: white;
+    height: 56px;
+    background-color: #70a401;
+    border: none;
+    border-radius: 8px;
+    font-family: "montserrat";
+    font-weight: 500;
+    cursor: pointer;
+}
+.DetailsBtnCommander button:hover {
+    background-color: #4c6f01;
+}
+.divIngredientsTitre {
+    margin: 0px;
+    margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.divIngredientsTitre span {
+    /* border: 1px solid; */
+    height: 25px;
+    width: 25px;
+    cursor: pointer;
+}
+.divIngredientsTitre span svg {
+    fill: gray;
+}
+.divIngredients.closed .divIngredientsTitre span svg {
+    transform: rotate(180deg);
+}
+.divIngredientsSupp.closed .divIngredientsTitre span svg {
+    transform: rotate(180deg);
+}
+.btnShowMore {
+    color: gray;
+    font-size: 12px;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+.btnShowMore svg {
+    fill: gray;
+    padding-top: 2px;
+    height: 26px;
+    width: 26px;
 }
