--- a/src/pages/Commande/Commande.css
+++ b/src/pages/Commande/Commande.css
@@ -4,6 +4,7 @@
     height: 80px;
 }
 .confirmation{
+    border-radius: 8px;
     margin-top: 80px;
     margin-bottom: 80px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
