ajout de 100px padding au home page

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -5,6 +5,7 @@
     max-width: 1200px;
     margin: 0 auto 15px;
     margin-top: 10px;
+    padding-bottom: 100px;
 }
 .divPizzas {
     width: 75%;
