--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -35,3 +35,14 @@
     flex-wrap: wrap;
     gap: 30px;
 }
+
+@media (max-width:990px) {
+    .divPizzas {
+        width: 100%;
+    }
+}
+@media (max-width:669px) {
+    .Pizzas {
+        justify-content: center;
+    }
+}
