--- a/src/components/Panier/Panier.css
+++ b/src/components/Panier/Panier.css
@@ -179,6 +179,44 @@
 .btnArticle.moins {
     padding-bottom: 4px;
 }
+.responsiveBtnPanier {
+    display: none;
+    width: 100%;
+    background-color: white;
+    z-index: 99;
+    padding: 5px;
+}
+.responsiveBtnPanier button {
+    display: flex;
+    align-items: center;
+    background-color: #c6db99;
+    color: white;
+    width: 100%;
+    border-radius: 8px;
+    height: 56px;
+    font-size: 18px;
+    padding-inline: 30px;
+}
+.responsiveBtnPanier button div:first-of-type {
+    background-color: #99ba51;
+    padding: 8px 10px;
+    border-radius: 4px;
+    /* height: 30px;
+    width: 30px; */
+}
+.responsiveBtnPanier.active button div:first-of-type {
+    background-color: #639003;
+}
+.responsiveBtnPanier.active button {
+    background-color: #70a401;
+    cursor: pointer;
+}
+.responsiveBtnPanier.active button:hover {
+    background-color: #4c6f01;
+}
+.responsiveBtnPanier.active button:active {
+    background-color: #4c6f01;
+}
 
 @media (max-width:990px) {
     .Panier {
@@ -190,5 +228,10 @@
         z-index: 100;
         background-color: white;
         padding-top: 50px;
+    }
+    .responsiveBtnPanier {
+        position: fixed;
+        bottom: 0;
+        display: flex;
     }
 }
