--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
-*{
+/* *{
     border: 1px solid red;
-}
+} */
 Footer{
     background-color: rgb(35, 31, 32);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
