--- a/src/components/Panier/Panier.css
+++ b/src/components/Panier/Panier.css
@@ -196,6 +196,7 @@
     height: 56px;
     font-size: 18px;
     padding-inline: 30px;
+    border: none;
 }
 .responsiveBtnPanier button div:first-of-type {
     background-color: #99ba51;
@@ -217,21 +218,35 @@
 .responsiveBtnPanier.active button:active {
     background-color: #4c6f01;
 }
+.btnFermerPanier {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    padding: 5px;
+    cursor: pointer;
+}
 
 @media (max-width:990px) {
     .Panier {
         display: none;
-        position: absolute;
+    }
+    .responsiveBtnPanier {
+        position: fixed;
+        bottom: 0;
+        display: flex;
+    }
+    .Panier2 {
+        position: fixed;
         top: 0;
         width: 100vw;
         height: 100vh;
         z-index: 100;
         background-color: white;
         padding-top: 50px;
-    }
-    .responsiveBtnPanier {
-        position: fixed;
-        bottom: 0;
+        padding-inline: 5%;
         display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        padding-bottom: 10px;
     }
 }
