--- a/src/components/Panier/Panier.css
+++ b/src/components/Panier/Panier.css
@@ -233,11 +233,13 @@
     .responsiveBtnPanier {
         position: fixed;
         bottom: 0;
+        left: 0;
         display: flex;
     }
     .Panier2 {
         position: fixed;
         top: 0;
+        left: 0;
         width: 100vw;
         height: 100vh;
         z-index: 100;
