unshow le boutton de details

--- a/src/components/Panier/Panier.css
+++ b/src/components/Panier/Panier.css
@@ -251,4 +251,7 @@
         justify-content: space-between;
         padding-bottom: 10px;
     }
+    .DetailsGeneral .responsiveBtnPanier {
+        display: none;
+    }
 }
