--- a/src/components/Panier/Panier.css
+++ b/src/components/Panier/Panier.css
@@ -225,7 +225,9 @@
     padding: 5px;
     cursor: pointer;
 }
-
+.Panier2 {
+    display: none;
+}
 @media (max-width:990px) {
     .Panier {
         display: none;
