--- a/src/pages/Details/Details.css
+++ b/src/pages/Details/Details.css
@@ -226,6 +226,25 @@
     }
 }
 @media (max-width:780px) {
+    .Details {
+        position: fixed;
+        height: 100vh;
+        width: 100vw;
+        top: 0;
+        margin-top: 0;
+        background-color: whitesmoke;
+        z-index: 200;
+    }
+    .retour {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .DetailsDivIngredients {
+        padding-bottom: 10px;
+    }
+    .DetailsGeneral {
+        overflow-y: auto;
+    }
     .DetailsPizza {
         flex-direction: column;
         height: auto;
@@ -240,5 +259,13 @@
     }
     .DetailsDivInfos {
         width: 100%;
+    }
+    .DetailsBtnCommander {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        padding: 5px;
+        background-color: white;
     }
 }
