--- a/src/pages/Commande/Commande.css
+++ b/src/pages/Commande/Commande.css
@@ -80,3 +80,14 @@
         font-size: 16px;
     }
 }
+@media (max-width:990px) {
+    .commande {
+        position: fixed;
+        background-color: white;
+        top: 0;
+        left: 0;
+        height: 100vh;
+        width: 100vw;
+        z-index: 10;
+    }
+}
