panier d'achat overflow y auto

--- a/src/components/Panier/Panier.css
+++ b/src/components/Panier/Panier.css
@@ -256,4 +256,8 @@
     .DetailsGeneral .responsiveBtnPanier {
         display: none;
     }
+    .Panier2 .PanierArticles {
+        overflow-y: auto;
+        height: 60vh;
+    }
 }
